[package]
name = "four"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json", "native-tls", "native-tls-vendored"], default-features = false }
rkyv = "0.8.11"
serde = { version = "1.0.219", features = ["derive"] }
tantivy = "0.25.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twilight-cache = "0.0.0"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = { version = "0.16.0", features = ["simd-json"] }
twilight-interactions = "0.16.2"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
